// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerLauncher handleError should hide twoFA modal if error  1`] = `
<React.Fragment>
  <Child
    launch={[Function]}
    running={false}
  />
</React.Fragment>
`;

exports[`TriggerLauncher handleError should unsubscribe from KonnectorJob 1`] = `
<React.Fragment>
  <Child
    launch={[Function]}
    running={false}
  />
</React.Fragment>
`;

exports[`TriggerLauncher handleLoginSuccess should hide twoFA modal 1`] = `
<React.Fragment>
  <Child
    launch={[Function]}
    running={true}
  />
</React.Fragment>
`;

exports[`TriggerLauncher handleSuccess should hide twoFA modal 1`] = `
<React.Fragment>
  <Child
    launch={[Function]}
    running={false}
  />
</React.Fragment>
`;

exports[`TriggerLauncher handleTwoFA should display Two FA modal 1`] = `
<React.Fragment>
  <Child
    launch={[Function]}
    running={false}
  />
  <Wrapper
    dismissAction={[Function]}
    into="coz-harvest-modal-place"
  />
</React.Fragment>
`;

exports[`TriggerLauncher should render 1`] = `
<React.Fragment>
  <Child />
</React.Fragment>
`;
